# slow-stac

./: .gitignore  Cargo.toml
examples/: copernicus_sentinel2.rs  element84_sentinel2.rs
src/: copernicus.rs  download_plan.rs  error.rs  image_selection.rs  lib.rs  main.rs  provider.rs  s3.rs  s3_operations.rs  stac_operations.rs
src/copernicus/: manifest.rs  mod.rs  provider.rs  sentinel2level2a.rs
src/element84/: mod.rs  provider.rs  sentinel2collection1level2a.rs
src/provider/: copernicus.rs  element84.rs  mod.rs
src/void_provider/: element84.rs
