[package]
name = "slow-stac"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.3"
aws-sdk-s3 = "1.38.0"
futures-util = "0.3.30"
regex = "1.10.5"
reqwest = "0.12.5"
serde = "1.0.203"
serde_json = "1.0.117"
stac = { version = "0.7.0", features = ["reqwest"] }
tokio = { version = "1.38.0", features = ["full"] }
