[package]
name = "slow-stac"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.38.0"
futures-util = "0.3.30"
regex = "1.10.5"
reqwest = "0.12.5"
serde = "1.0.203"
serde_json = "1.0.117"
stac = { version = "0.9.0", features = ["reqwest"] }
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
roxmltree = "0.20.0"
thiserror = "1.0.63"
aws-smithy-runtime-api = "1.7.1"
toml = "0.8.16"
clap = { version = "4.5.17", features = ["derive"] }
